Fixed bug with appears horizontal scrollbar at foods-total-items

--- a/front/src/app/foods-page/foods-total-items/foods-total-items.component.css
+++ b/front/src/app/foods-page/foods-total-items/foods-total-items.component.css
@@ -1,6 +1,7 @@
 .collapsible {
   max-height: 80vh;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 .collapsible-header {
   display: flex;
